trying to fix paths

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                         <div class = "thumbnail-holder"></div>
 
-                        <img id = "thumbnail-image" src = "/styles/img/unknown.png">
+                        <img id = "thumbnail-image" src = "../images/unknown.png">
 
                     </div>
 
