--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                         <div class = "thumbnail-holder"></div>
 
-                        <img id = "thumbnail-image" url = "../images/unknown.png" alt = "No lot found">
+                        <img id = "thumbnail-image" src = "./images/unknown.png" alt = "No lot found">
 
                     </div>
 
