redirected panel help to github wiki page

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <div class = "button-sim-help-holder">
                             
                             <button class = "button-sim-help" title = "Open Sim Panel Formatting Help Page"
-                            onclick = "window.open('https://sam-chug.github.io/SimFinderStyles.html')">
+                            onclick = "window.open('https://github.com/Sam-Chug/sim-finder/wiki/Custom-Sim-Panel-Styles')">
                                 <div class = "buttom-sim-help-image"></div>
                             </button>
 
@@ -299,7 +299,6 @@
 
                     </div>
                 </div>
-                
             </div>
         </div>
     </body>
