- start of rework

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link href="styles/new-style.css?v0.2.1a" rel="stylesheet"/>
         <link href="styles/style.css?v0.2.1a" rel="stylesheet"/>
         <link href="styles/style-lot-thumbnail.css?v0.2.1a" rel="stylesheet"/>
         <link href="styles/style-lists.css?v0.2.1a" rel="stylesheet"/>
@@ -17,6 +18,10 @@
         <link href="styles/style-market-watch.css?v0.2.1a" rel="stylesheet"/>
         <link href="styles/style-nhood-watch.css?v0.2.1a" rel="stylesheet"/>
         <link href="styles/style-sidebar.css?v0.2.1a" rel="stylesheet"/>
+
+
+        <script defer src="./js/class/finder-class.js"></script>
+        <script defer src="./js/utils/utils.js"></script>
 
         <script defer src="./js/main.js?v0.2.1a"></script>
         <script defer src="./js/bookmarks.js?v0.2.1a"></script>
