- more work on sim/lot bios

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     
                             <!-- lot picture -->
                             <div id="lot-thumbnail-bg" class="thumbnail-holder"></div>
-                            <img id="thumbnail-image" src="./images/unknown.png?v0.2.1a" alt="No lot image found">
+                            <img id="lot-thumbnail-image" src="./images/unknown.png?v0.2.1a" alt="No lot image found">
     
                         </div>
                     </div>
