- almost finished with bookmarks

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <div id="sim-thumbnail-bg" class= "sim-thumbnail-bg"></div>
                             <img id="sim-thumbnail-image" src="./images/sim-faces/simface-f.png?v0.2.1a" alt="No sim image found">
 
-                            <input type="checkbox" id="bookmark-checkbox" class="bookmark-checkbox" name="bookmark" onclick="checkBookmark()">
+                            <input type="checkbox" id="bookmark-checkbox" class="bookmark-checkbox" name="bookmark" onclick="storageUtils.handleBookmarkCheck()">
                             <label for="bookmark" class="bookmark-label"
                             onclick="document.getElementById('bookmark-checkbox').click()">
                             Bookmark This Sim</label>
