--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                         <div class="button-center">
 
-                            <button id="sim-search-button" class="search-button" onclick="searchSim()"></button>
+                            <button id="sim-search-button" class="search-button" onclick="searchUtils.searchSim()"></button>
 
                         </div>
                     </div>
@@ -128,7 +128,7 @@
 
                         <div class="button-center">
 
-                            <button id="lot-search-button" class="search-button" onclick="searchLot()"></button>
+                            <button id="lot-search-button" class="search-button" onclick="searchUtils.searchLot()"></button>
 
                         </div>
                     </div>
