- condensed some lot bio info

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <div id="show-sims-in-lot" class="div-list-sims-block block-background" style="display: none">
 
                     <!-- title -->
-                    <div class="outset-title sims-in-lot-title">Sims In Lot</div>
+                    <div id="lot-sims-in-lot-title" class="outset-title sims-in-lot-title">Sims In Lot</div>
                     <div class="div-sims-in-lot">
 
                         <!-- sim list -->
