- added sidebar functionality

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
         <script defer src="./js/class/finder-class.js"></script>
         <script defer src="./js/utils/utils.js"></script>
         <script defer src="./js/main.js?v0.2.1a"></script>
-
-        <script defer src="./js/elements.js?v0.2.1a"></script>
         
         <title>Sim Finder</title>
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico?v0.2.1a">
@@ -32,7 +30,7 @@
                     <!-- expand -->
                     <div class="expand-sidebar">
 
-                        <button title="Expand Sidebar" id="sidebar-button" class="expand-sidebar-button" onclick="expandSidebar()">
+                        <button title="Expand Sidebar" id="sidebar-button" class="expand-sidebar-button" onclick="sidebarUtils.expandSidebar()">
                             <div class="expand-sidebar-image"></div>
                         </button>
                     </div>
