- add clickable sims in lot

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <script defer src="./js/definitions.js?v0.2.1a"></script>
         <script defer src="./js/finder-class.js"></script>
-        <script defer src="./js/utils.js"></script>
+        <script defer src="./js/function.js"></script>
         <script defer src="./js/main.js?v0.2.1a"></script>
         
         <title>Sim Finder</title>
