- inset custom styles

--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
                         </div>
 
                         <!-- sim's info and bio -->
-                        <div class="div-sim-desc-bio">
+                        <div>
 
                             <div id="sim-desc" class="thumbnail-desc-holder">Unknown</div>
-                            <div id="sim-bio" class="thumbnail-sim-bio thumbnail-bio-holder scrollbar">Unknown</div>
+                            <div id="sim-bio" class="thumbnail-bio-holder scrollbar">Unknown</div>
 
                         </div>
                     </div>
