--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link href="styles/style.css?v0.2.1a" rel="stylesheet"/>
 
         <script defer src="./js/definitions.js?v0.2.1a"></script>
-        <script defer src="./js/finder-class.js"></script>
-        <script defer src="./js/function.js"></script>
+        <script defer src="./js/finder-class.js?v0.2.1a"></script>
+        <script defer src="./js/function.js?v0.2.1a"></script>
         <script defer src="./js/main.js?v0.2.1a"></script>
         
         <title>Sim Finder</title>
