- added name-sort buttons to both lists

--- a/index.html
+++ b/index.html
@@ -99,7 +99,16 @@
                 <!-- sim list -->
                 <div id="sim-list-panel" class="div-sim-table block-background">
                     
-                    <div id="sims-online-count-label" class="inset-title"></div>
+                    <div class="list-title-container">
+
+                        <div id="sims-online-count-label" class="inset-title" style="margin-right: 10px; margin-left: 30px;"></div>
+                        <div class="button-center">
+
+                            <button id="sort-sims-by-name" class="sort-button"></button>
+
+                        </div>
+                    </div>
+
                     <div id="sims-table" class="list-table scrollbar" style="max-height: 650px;"></div>
                     
                 </div>
