- name sort for sim/lot lists

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div id="sims-online-count-label" class="inset-title" style="margin-right: 10px; margin-left: 30px;"></div>
                         <div class="button-center">
 
-                            <button id="sort-sims-by-name" class="sort-button"></button>
+                            <button id="sort-sims-by-name" class="sort-button" onclick="simUtils.sortEntityList('sim')"></button>
 
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                         <div id="lots-online-count-label" class="inset-title" style="margin-right: 10px; margin-left: 30px"></div>
                         <div class="button-center">
 
-                            <button id="sort-lots-by-name" class="sort-button"></button>
+                            <button id="sort-lots-by-name" class="sort-button" onclick="simUtils.sortEntityList('lot')"></button>
 
                         </div>
                     </div>
