--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         <div id="thumbnail-desc-content" class="thumbnail-desc-holder thumb-2 lot-thumbnail-info-text">Unknown</div>
 
                         <!-- lot bio -->
-                        <div id="thumbnail-lot-bio" class="thumbnail-desc-holder thumb-2 thumbnail-bio-holder scrollbar" style="display:none">a</div>
+                        <div id="thumbnail-lot-bio" class="thumbnail-desc-holder thumb-2 thumbnail-bio-holder scrollbar lot-thumbnail-bio" style="display:none">a</div>
 
                     </div>
                     
