- custom styles for lots

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div>
 
                 <!-- selected lot info -->
-                <div class="div-thumbnail block-background">
+                <div id="lot-viewer" class="div-thumbnail block-background">
 
                     <!-- thumbnail and title div -->
                     <div class="div-thumbnail-desc thumb-1">
