--- a/index.html
+++ b/index.html
@@ -177,7 +177,20 @@
                 <!-- bookmark list -->
                 <div class="div-sim-table block-background">
 
-                    <div class="inset-title">Bookmarks</div>
+                    <div class="bookmark-header-container">
+
+                        <button title="Export Bookmarks" id="sidebar-button" class="bookmark-button" onclick="storageUtils.exportLocalStorage(STORAGE_KEY)">
+                            <div class="export-arrow"></div>
+                        </button>
+
+                        <div class="inset-title">Bookmarks</div>
+
+                        <button title="Import Bookmarks" id="sidebar-button" class="bookmark-button" onclick="storageUtils.importLocalStorage(STORAGE_KEY)">
+                            <div class="import-arrow"></div>
+                        </button>
+
+                    </div>
+
                     <div><table id="bookmark-table" class="list-table scrollbar" style="max-height: 301px;"></table></div>
 
                 </div>
