--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                             <div id="sim-thumbnail-bg" class= "sim-thumbnail-bg"></div>
                             <img id="sim-thumbnail-image" src="./images/sim-faces/simface-f.png?v0.2.1d" alt="No sim image found">
 
+                            <!-- TODO: apply custom style to bookmark label -->
                             <input type="checkbox" id="bookmark-checkbox" class="bookmark-checkbox" name="bookmark" onclick="storageUtils.handleBookmarkCheck()">
                             <label for="bookmark" class="bookmark-label"
                             onclick="document.getElementById('bookmark-checkbox').click()">
