- implimented usersettings class - added darkmode setting - saving/loading usersettings

--- a/index.html
+++ b/index.html
@@ -308,5 +308,14 @@
                 </div>
             </div>
         </div>
+        <!-- light/dark mode -->
+        <div class="colormode-toggle-container block-background">
+
+            <div class="button-center">
+
+                <button class="light-button" onclick="domUtils.swapColorMode()"></button>
+
+            </div>
+        </div>
     </body>
 </html>
