--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
             <div class="button-center">
 
-                <button class="light-button" onclick="domUtils.swapColorMode()"></button>
+                <button id="colormode-button" class="light-button" onclick="domUtils.swapColorMode()"></button>
 
             </div>
         </div>
