- custom styles for bookmark labels

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
                             <!-- TODO: apply custom style to bookmark label -->
                             <input type="checkbox" id="bookmark-checkbox" class="bookmark-checkbox" name="bookmark" onclick="storageUtils.handleBookmarkCheck()">
-                            <label for="bookmark" class="bookmark-label"
+                            <label id="bookmark-label" for="bookmark" class="bookmark-label"
                             onclick="document.getElementById('bookmark-checkbox').click()">
                             Bookmark This Sim</label>
 
