--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href="styles/style.css?v0.2.2a" rel="stylesheet"/>
+        <link href="styles/style.css?v0.2.2b" rel="stylesheet"/>
 
         <title>Sim Finder</title>
-        <link rel="icon" type="image/x-icon" href="./images/favicon.ico?v0.2.2a">
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico?v0.2.2b">
 
         <meta name="description" content="Sim Dashboard For FreeSO">
         <meta name="keywords" content="sim finder, freeso, the sims online">
@@ -20,19 +20,19 @@
         <meta property="og:title" content="Sim Finder" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://sam-chug.github.io/sim-finder/" />
-        <meta property="og:image" content="https://sam-chug.github.io/sim-finder/images/unknown.png?v0.2.2a" />
+        <meta property="og:image" content="https://sam-chug.github.io/sim-finder/images/unknown.png?v0.2.2b" />
         <meta property="og:description" content="Sim Dashboard For FreeSO" />
 
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://sam-chug.github.io/sim-finder/" />
         <meta property="twitter:title" content="Sim Finder" />
         <meta property="twitter:description" content="Sim Dashboard For FreeSO" />
-        <meta property="twitter:image" content="https://sam-chug.github.io/sim-finder/images/unknown.png?v0.2.2a" />
+        <meta property="twitter:image" content="https://sam-chug.github.io/sim-finder/images/unknown.png?v0.2.2b" />
 
-        <script defer src="./js/definitions.js?v0.2.2a"></script>
-        <script defer src="./js/finder-class.js?v0.2.2a"></script>
-        <script defer src="./js/function.js?v0.2.2a"></script>
-        <script defer src="./js/main.js?v0.2.2a"></script>
+        <script defer src="./js/definitions.js?v0.2.2b"></script>
+        <script defer src="./js/finder-class.js?v0.2.2b"></script>
+        <script defer src="./js/function.js?v0.2.2b"></script>
+        <script defer src="./js/main.js?v0.2.2b"></script>
 
     </head>
     <body onresize="domUtils.sizeLists()">
@@ -241,7 +241,7 @@
                         <div class="div-sim-thumbnail">
 
                             <div id="sim-thumbnail-bg" class= "sim-thumbnail-bg"></div>
-                            <img id="sim-thumbnail-image" src="./images/sim-faces/simface-f.png?v0.2.2a" alt="No sim image found">
+                            <img id="sim-thumbnail-image" src="./images/sim-faces/simface-f.png?v0.2.2b" alt="No sim image found">
 
                             <!-- TODO: apply custom style to bookmark label -->
                             <input type="checkbox" id="bookmark-checkbox" class="bookmark-checkbox" name="bookmark" onclick="storageUtils.handleBookmarkCheck()">
@@ -272,7 +272,7 @@
     
                             <!-- lot picture -->
                             <div id="lot-thumbnail-bg" class="thumbnail-holder"></div>
-                            <img id="lot-thumbnail-image" src="./images/unknown.png?v0.2.2a" alt="No lot image found">
+                            <img id="lot-thumbnail-image" src="./images/unknown.png?v0.2.2b" alt="No lot image found">
     
                         </div>
                     </div>
@@ -309,9 +309,9 @@
                     <!-- title -->
                     <div class="div-market-watch-title">
 
-                        <img src="./images/buttons/market-watch-graphic.png?v0.2.2a" alt="">
+                        <img src="./images/buttons/market-watch-graphic.png?v0.2.2b" alt="">
                         <p class="outset-title" style="min-width: fit-content">FreeSO Market Analysis</p>
-                        <img src="./images/buttons/market-watch-graphic.png?v0.2.2a" alt="">
+                        <img src="./images/buttons/market-watch-graphic.png?v0.2.2b" alt="">
 
                     </div>
 
