--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <script defer src="./js/main.js?v0.2.2b"></script>
 
     </head>
-    <body onresize="domUtils.sizeLists()">
+    <body class="scrollbar" onresize="domUtils.sizeLists()">
         
         <!-- the stuff -->
         <div class="container">
