- add google analytics

--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
     <head>
         
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-TWGTW7PBKM"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            
+            gtag('config', 'G-TWGTW7PBKM');
+        </script>
+
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <link href="styles/style.css?v0.2.2b" rel="stylesheet"/>
 
         <title>Sim Finder</title>
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico?v0.2.2b">
@@ -29,6 +37,7 @@
         <meta property="twitter:description" content="Sim Dashboard For FreeSO" />
         <meta property="twitter:image" content="https://sam-chug.github.io/sim-finder/images/unknown.png?v0.2.2b" />
 
+        <link href="styles/style.css?v0.2.2b" rel="stylesheet"/>
         <script defer src="./js/definitions.js?v0.2.2b"></script>
         <script defer src="./js/finder-class.js?v0.2.2b"></script>
         <script defer src="./js/function.js?v0.2.2b"></script>
