- tooltips for jobs active

--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
 
                     <!-- jobs active -->
                     <div class="job-holder">
-                        <div title="Robot Factory" id="job-robot" class="job-active"></div>
-                        <div title="Diner" id="job-diner" class="job-active"></div>
-                        <div title="Club - DJ/Dancer" id="job-club" class="job-active"></div>
+                        <div id="job-robot" class="job-active"></div>
+                        <div id="job-diner" class="job-active"></div>
+                        <div id="job-club" class="job-active"></div>
                     </div>
 
                 </div>
