- sim clock font size

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <div class="clock-bar-container block-background">
 
                     <!-- clock -->
-                    <div id="sim-clock" class="clock-text sim-clock"></div>
+                    <div id="sim-clock" class="clock-text sim-clock">00:00 AM</div>
 
                     <!-- jobs active -->
                     <div class="job-holder">
