- notes - variable names

--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
                     <div class="bookmark-header-container">
 
                         <button id="sidebar-button" class="bookmark-button">
-                            <div id="export-button" class="export-arrow" onclick="storageUtils.exportLocalStorage(STORAGE_KEY)"></div>
+                            <div id="export-button" class="export-arrow" onclick="storageUtils.exportLocalStorage(STORAGE_BOOKMARK_KEY)"></div>
                         </button>
 
                         <div class="inset-title">Bookmarks</div>
 
                         <button id="sidebar-button" class="bookmark-button">
-                            <div id="import-button" class="import-arrow" onclick="storageUtils.importLocalStorage(STORAGE_KEY)"></div>
+                            <div id="import-button" class="import-arrow" onclick="storageUtils.importLocalStorage(STORAGE_BOOKMARK_KEY)"></div>
                         </button>
 
                     </div>
